assign employee to appointment